--- a/src/Components/PostCard/PostCardBig/PostCardBig.module.scss
+++ b/src/Components/PostCard/PostCardBig/PostCardBig.module.scss
@@ -26,6 +26,16 @@
       }
       .postCardTitle {
         margin-bottom: 24px;
+
+        .postCardTitleLink {
+          &:hover {
+            cursor: pointer;
+            color: rgba(83, 96, 205, 1);
+            &:active {
+              color: rgba(34, 49, 170, 1);
+            }
+          }
+        }
       }
       .postCardSubtitle {
         color: rgba(141, 142, 151, 1);
@@ -43,6 +53,7 @@
         height: 244px;
         width: 256px;
         overflow: hidden;
+        cursor: pointer;
         .postCardImg {
           width: 100%;
           height: 100%;
