--- a/src/Components/PostCard/PostCardSmall/PostCardSmall.module.scss
+++ b/src/Components/PostCard/PostCardSmall/PostCardSmall.module.scss
@@ -1,8 +1,3 @@
-// .postCardWrap {
-// display: flex;
-// flex-direction: column;
-// margin-bottom: 39px;
-
 .postCardWrapLittle {
   display: flex;
   flex-direction: column;
@@ -37,6 +32,15 @@
         font-size: 15px;
         font-weight: 600;
         line-height: 28px;
+        .postCardTitleLink {
+          &:hover {
+            cursor: pointer;
+            color: rgba(83, 96, 205, 1);
+            &:active {
+              color: rgba(34, 49, 170, 1);
+            }
+          }
+        }
       }
     }
     .postCardWrapRight {
@@ -45,6 +49,7 @@
       justify-content: start;
       align-items: end;
       .imgWrap {
+        cursor: pointer;
         height: 96px;
         width: 96px;
         overflow: hidden;
@@ -96,4 +101,3 @@
     }
   }
 }
-// }
