--- a/src/Components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/Components/BurgerMenu/BurgerMenu.module.scss
@@ -2,7 +2,7 @@
   height: 100%;
   width: 84px;
   background-color: #2231aa;
-  border: 1px solid #5360cd;
-  border-bottom: none;
+  border: none;
+  border-right: 1px solid #5360cd;
   cursor: pointer;
 }
