--- a/src/Components/PostCard/PostCard.module.scss
+++ b/src/Components/PostCard/PostCard.module.scss
@@ -1,220 +1,26 @@
-.postCardWrap {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 39px;
-  .postCardWrapMainandLittle {
-    width: 100%;
+.postsCardWrap {
+  .postCardWrap {
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    .postCardWrapMiddles {
+    flex-direction: column;
+    margin-bottom: 39px;
+    .postCardWrapMainandLittle {
+      width: 100%;
       display: flex;
       justify-content: space-between;
+      flex-direction: row;
 
-      width: 66%;
-      margin-right: 15px;
-      .postCardWrapMiddle {
+      .postCardWrapMain {
         display: flex;
-        flex-direction: column;
-        justify-content: end;
-        border-bottom: 1px rgba(218, 218, 218, 1) solid;
-        margin-right: 15px;
-        .postCardWrapUp {
-          display: flex;
-          flex-direction: column-reverse;
-          margin-right: 10px;
-          justify-content: space-between;
-          .postCardWrapLeft {
-            display: flex;
-            flex-direction: column;
-            margin-right: 3px;
-            .postCardDate {
-              display: flex;
-              justify-content: start;
-              color: rgba(141, 142, 151, 1);
-              font-family: Inter;
-              font-size: 16px;
-              font-weight: 400;
-              line-height: 24px;
-              margin-bottom: 8px;
-            }
-            .postCardTitle {
-              margin-bottom: 24px;
-              font-family: Inter;
-              font-size: 18px;
-              font-weight: 600;
-              line-height: 28px;
-            }
-          }
-          .postCardWrapRight {
-            display: flex;
-            flex-direction: column;
-
-            .imgWrap {
-              height: 250px;
-              width: 290px;
-              border: 1px solid;
-              overflow: hidden;
-              .postCardImg {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                object-position: center;
-              }
-            }
-          }
-
-          .postCardWrapDown {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            margin-bottom: 40px;
-            .thumbsWrap {
-              display: flex;
-              flex-direction: row;
-              justify-content: space-between;
-              align-items: center;
-              width: 130px;
-
-              .thumbsUpWrap {
-                width: 53px;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-              }
-              .thumbsDownWrap {
-                width: 53px;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-              }
-            }
-            .saveDotsWrap {
-              .saveDots {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                width: 64px;
-              }
-            }
-          }
-        }
-      }
-    }
-    .postCardWrapMain {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-      width: 66%;
-      margin-bottom: 39px;
-      border-bottom: 1px rgba(218, 218, 218, 1) solid;
-      .postCardWrapUp {
-        display: flex;
-        flex-direction: row;
         justify-content: space-between;
-        margin-bottom: 31px;
-        .postCardWrapLeft {
-          display: flex;
-          flex-direction: column;
-          margin-right: 3px;
-          .postCardDate {
-            display: flex;
-            justify-content: start;
-            color: rgba(141, 142, 151, 1);
-            font-family: Inter;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 24px;
-            margin-bottom: 8px;
-          }
-          .postCardTitle {
-            margin-bottom: 24px;
-          }
-          .postCardSubtitle {
-            color: rgba(141, 142, 151, 1);
-            font-family: Inter;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 28px;
-          }
-        }
-        .postCardWrapRight {
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-end;
-          align-items: flex-start;
-          .imgWrap {
-            height: 244px;
-            width: 256px;
-            border: 1px solid;
-            overflow: hidden;
-            .postCardImg {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: center;
-            }
-          }
-        }
-      }
-
-      .postCardWrapDown {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-bottom: 40px;
-        .thumbsWrap {
-          display: flex;
-          flex-direction: row;
-          justify-content: space-between;
-          align-items: center;
-          width: 130px;
-
-          .thumbsUpWrap {
-            width: 53px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-          }
-          .thumbsDownWrap {
-            width: 53px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-          }
-        }
-        .saveDotsWrap {
-          .saveDots {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            width: 64px;
-          }
-        }
-      }
-    }
-    .postCardWrapLittles {
-      width: 30%;
-      display: flex;
-      flex-direction: column;
-      justify-content: end;
-
-      .postCardWrapLittle {
-        display: flex;
         flex-direction: column;
-        justify-content: end;
+        width: 66%;
         margin-bottom: 39px;
         border-bottom: 1px rgba(218, 218, 218, 1) solid;
         .postCardWrapUp {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
+          margin-bottom: 31px;
           .postCardWrapLeft {
             display: flex;
             flex-direction: column;
@@ -231,20 +37,23 @@
             }
             .postCardTitle {
               margin-bottom: 24px;
+            }
+            .postCardSubtitle {
+              color: rgba(141, 142, 151, 1);
               font-family: Inter;
-              font-size: 18px;
-              font-weight: 600;
+              font-size: 16px;
+              font-weight: 400;
               line-height: 28px;
             }
           }
           .postCardWrapRight {
             display: flex;
             flex-direction: column;
-            justify-content: start;
-            align-items: end;
+            justify-content: flex-end;
+            align-items: flex-start;
             .imgWrap {
-              height: 96px;
-              width: 96px;
+              height: 244px;
+              width: 256px;
               border: 1px solid;
               overflow: hidden;
               .postCardImg {
@@ -291,6 +100,305 @@
               justify-content: space-between;
               align-items: center;
               width: 64px;
+            }
+          }
+        }
+      }
+      .postCardWrapLittles {
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+
+        .postCardWrapLittle {
+          display: flex;
+          flex-direction: column;
+          justify-content: end;
+          margin-bottom: 39px;
+          border-bottom: 1px rgba(218, 218, 218, 1) solid;
+          .postCardWrapUp {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            .postCardWrapLeft {
+              display: flex;
+              flex-direction: column;
+              margin-right: 3px;
+              .postCardDate {
+                display: flex;
+                justify-content: start;
+                color: rgba(141, 142, 151, 1);
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 24px;
+                margin-bottom: 8px;
+              }
+              .postCardTitle {
+                margin-bottom: 24px;
+                font-family: Inter;
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 28px;
+              }
+            }
+            .postCardWrapRight {
+              display: flex;
+              flex-direction: column;
+              justify-content: start;
+              align-items: end;
+              .imgWrap {
+                height: 96px;
+                width: 96px;
+                border: 1px solid;
+                overflow: hidden;
+                .postCardImg {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  object-position: center;
+                }
+              }
+            }
+          }
+
+          .postCardWrapDown {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-bottom: 40px;
+            .thumbsWrap {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              align-items: center;
+              width: 130px;
+
+              .thumbsUpWrap {
+                width: 53px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+              }
+              .thumbsDownWrap {
+                width: 53px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+              }
+            }
+            .saveDotsWrap {
+              .saveDots {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                width: 64px;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .postCardWrapMiddleandLittle {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+      .postCardWrapMiddles {
+        display: flex;
+        justify-content: space-between;
+
+        width: 66%;
+        margin-right: 15px;
+        .postCardWrapMiddle {
+          display: flex;
+          flex-direction: column;
+          justify-content: end;
+          border-bottom: 1px rgba(218, 218, 218, 1) solid;
+          margin-right: 15px;
+          .postCardWrapUp {
+            display: flex;
+            flex-direction: column-reverse;
+            margin-right: 10px;
+            justify-content: space-between;
+            .postCardWrapLeft {
+              display: flex;
+              flex-direction: column;
+              margin-right: 3px;
+              .postCardDate {
+                display: flex;
+                justify-content: start;
+                color: rgba(141, 142, 151, 1);
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 24px;
+                margin-bottom: 8px;
+              }
+              .postCardTitle {
+                margin-bottom: 24px;
+                font-family: Inter;
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 28px;
+              }
+            }
+            .postCardWrapRight {
+              display: flex;
+              flex-direction: column;
+
+              .imgWrap {
+                height: 250px;
+                width: 290px;
+                border: 1px solid;
+                overflow: hidden;
+                .postCardImg {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  object-position: center;
+                }
+              }
+            }
+
+            .postCardWrapDown {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              margin-bottom: 40px;
+              .thumbsWrap {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                width: 130px;
+
+                .thumbsUpWrap {
+                  width: 53px;
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  align-items: center;
+                }
+                .thumbsDownWrap {
+                  width: 53px;
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  align-items: center;
+                }
+              }
+              .saveDotsWrap {
+                .saveDots {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  align-items: center;
+                  width: 64px;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .postCardWrapLittles {
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+
+        .postCardWrapLittle {
+          display: flex;
+          flex-direction: column;
+          justify-content: end;
+          margin-bottom: 39px;
+          border-bottom: 1px rgba(218, 218, 218, 1) solid;
+          .postCardWrapUp {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            .postCardWrapLeft {
+              display: flex;
+              flex-direction: column;
+              margin-right: 3px;
+              .postCardDate {
+                display: flex;
+                justify-content: start;
+                color: rgba(141, 142, 151, 1);
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 24px;
+                margin-bottom: 8px;
+              }
+              .postCardTitle {
+                margin-bottom: 24px;
+                font-family: Inter;
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 28px;
+              }
+            }
+            .postCardWrapRight {
+              display: flex;
+              flex-direction: column;
+              justify-content: start;
+              align-items: end;
+              .imgWrap {
+                height: 96px;
+                width: 96px;
+                border: 1px solid;
+                overflow: hidden;
+                .postCardImg {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  object-position: center;
+                }
+              }
+            }
+          }
+
+          .postCardWrapDown {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-bottom: 40px;
+            .thumbsWrap {
+              display: flex;
+              flex-direction: row;
+              justify-content: space-between;
+              align-items: center;
+              width: 130px;
+
+              .thumbsUpWrap {
+                width: 53px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+              }
+              .thumbsDownWrap {
+                width: 53px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+              }
+            }
+            .saveDotsWrap {
+              .saveDots {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                width: 64px;
+              }
             }
           }
         }
@@ -392,6 +500,80 @@
       &:disabled {
         color: rgba(141, 142, 151, 1);
         cursor: not-allowed;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .postsCardWrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    column-count: 2;
+    .postCardWrap {
+      width: 100%;
+      margin: auto;
+      .postCardWrapMainandLittle {
+        display: none;
+      }
+      .postCardWrapMiddleandLittle {
+        margin: auto;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        .postCardWrapMiddles {
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          .postCardWrapMiddle {
+            margin-right: 0;
+            .postCardWrapUp {
+              .postCardWrapLeft {
+                .postCardDate {
+                }
+                .postCardTitle {
+                }
+              }
+              .postCardWrapRight {
+                .imgWrap {
+                  .postCardImg {
+                  }
+                }
+              }
+
+              .postCardWrapDown {
+                .thumbsWrap {
+                  .thumbsUpWrap {
+                  }
+                  .thumbsDownWrap {
+                  }
+                }
+                .saveDotsWrap {
+                  .saveDots {
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .postCardWrapLittles {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .postsCardWrap {
+    .postCardWrap {
+      .postCardWrapMiddleandLittle {
+        .postCardWrapMiddles {
+          flex-direction: column;
+        }
       }
     }
   }
