--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -10,6 +10,18 @@
   .blog {
     .container {
       max-width: 688px;
+      padding: 0;
+      margin: auto;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .blog {
+    .container {
+      max-width: 270px;
+      padding: 0;
+      margin: auto;
     }
   }
 }
