--- a/src/Components/PopUp/PopUp.module.scss
+++ b/src/Components/PopUp/PopUp.module.scss
@@ -142,6 +142,11 @@
             align-items: center;
             width: 64px;
             color: rgba(76, 75, 94, 1);
+            .faBookmark {
+              background-color: transparent;
+              color: rgba(76, 75, 94, 1);
+              border: none;
+            }
           }
         }
       }
