--- a/src/Components/PostCard/PostCardMiddle/PostCardMiddle.module.scss
+++ b/src/Components/PostCard/PostCardMiddle/PostCardMiddle.module.scss
@@ -93,6 +93,10 @@
         justify-content: space-between;
         align-items: center;
         width: 64px;
+        .faBookmark {
+          background-color: transparent;
+          border: none;
+        }
       }
     }
   }
