--- a/src/Pages/MyFavorite/MyFavorite.module.scss
+++ b/src/Pages/MyFavorite/MyFavorite.module.scss
@@ -1,18 +1,8 @@
 .container {
   max-width: 900px;
-  padding: 72px 15px 15px 0;
+  padding: 0 15px 15px 0;
   margin: auto;
-  .backHomeBtn {
-    text-decoration: none;
 
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 28px;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
   .postsCardWrap {
     .postCardWrap {
       display: flex;
@@ -25,12 +15,14 @@
         flex-direction: row;
         .postCardWrapMiddles {
           display: flex;
+          flex-wrap: wrap;
+          gap: 15px;
           justify-content: space-between;
-
-          width: 66%;
-          margin-right: 15px;
+          flex-direction: row;
+          width: 100%;
           .postCardWrapMiddle {
             display: flex;
+            width: calc(50% - 30px);
             flex-direction: column;
             justify-content: end;
             border-bottom: 1px rgba(218, 218, 218, 1) solid;
@@ -117,103 +109,6 @@
                     width: 64px;
                   }
                 }
-              }
-            }
-          }
-        }
-      }
-      .postCardWrapLittles {
-        width: 30%;
-        display: flex;
-        flex-direction: column;
-        justify-content: end;
-
-        .postCardWrapLittle {
-          display: flex;
-          flex-direction: column;
-          justify-content: end;
-          margin-bottom: 39px;
-          border-bottom: 1px rgba(218, 218, 218, 1) solid;
-          .postCardWrapUp {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            .postCardWrapLeft {
-              display: flex;
-              flex-direction: column;
-              margin-right: 3px;
-              .postCardDate {
-                display: flex;
-                justify-content: start;
-                color: rgba(141, 142, 151, 1);
-                font-family: Inter;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 24px;
-                margin-bottom: 8px;
-              }
-              .postCardTitle {
-                margin-bottom: 24px;
-                font-family: Inter;
-                font-size: 18px;
-                font-weight: 600;
-                line-height: 28px;
-              }
-            }
-            .postCardWrapRight {
-              display: flex;
-              flex-direction: column;
-              justify-content: start;
-              align-items: end;
-              .imgWrap {
-                height: 96px;
-                width: 96px;
-                border: 1px solid;
-                overflow: hidden;
-                .postCardImg {
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  object-position: center;
-                }
-              }
-            }
-          }
-
-          .postCardWrapDown {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            margin-bottom: 40px;
-            .thumbsWrap {
-              display: flex;
-              flex-direction: row;
-              justify-content: space-between;
-              align-items: center;
-              width: 130px;
-
-              .thumbsUpWrap {
-                width: 53px;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-              }
-              .thumbsDownWrap {
-                width: 53px;
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-              }
-            }
-            .saveDotsWrap {
-              .saveDots {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                width: 64px;
               }
             }
           }
