--- a/src/Pages/SearchPage/SearchPage.module.scss
+++ b/src/Pages/SearchPage/SearchPage.module.scss
@@ -78,6 +78,10 @@
             justify-content: space-between;
             align-items: center;
             width: 64px;
+            .faBookmark {
+              background-color: transparent;
+              border: none;
+            }
           }
         }
       }
