--- a/src/Components/PopUp/PopUp.module.scss
+++ b/src/Components/PopUp/PopUp.module.scss
@@ -146,6 +146,13 @@
               background-color: transparent;
               color: rgba(76, 75, 94, 1);
               border: none;
+
+              &:hover {
+                color: rgba(83, 96, 205, 1);
+              }
+              &:active {
+                color: rgba(34, 49, 170, 1);
+              }
             }
           }
         }
