--- a/src/Components/PostCard/PostCardMiddle/PostCardMiddle.module.scss
+++ b/src/Components/PostCard/PostCardMiddle/PostCardMiddle.module.scss
@@ -96,6 +96,12 @@
         .faBookmark {
           background-color: transparent;
           border: none;
+          &:hover {
+            color: rgba(83, 96, 205, 1);
+          }
+          &:active {
+            color: rgba(34, 49, 170, 1);
+          }
         }
       }
     }
