--- a/src/Pages/MyFavorite/MyFavorite.module.scss
+++ b/src/Pages/MyFavorite/MyFavorite.module.scss
@@ -20,12 +20,14 @@
           justify-content: space-between;
           flex-direction: row;
           width: 100%;
+
           .postCardWrapMiddle {
             display: flex;
             width: calc(50% - 30px);
+            // height: 100%;
             flex-direction: column;
-            justify-content: end;
-            border-bottom: 1px rgba(218, 218, 218, 1) solid;
+            justify-content: space-between;
+            // border-bottom: 1px rgba(218, 218, 218, 1) solid;
             margin-right: 15px;
             .postCardWrapUp {
               display: flex;
