--- a/src/Pages/SelectedPost/SelectedPost.module.scss
+++ b/src/Pages/SelectedPost/SelectedPost.module.scss
@@ -115,6 +115,14 @@
             color: rgba(49, 48, 55, 1);
 
             cursor: pointer;
+
+            &:hover {
+              background-color: rgba(83, 96, 205, 1);
+            }
+            &:active {
+              background-color: rgba(34, 49, 170, 1);
+            }
+
             &::after {
               content: "Add to favorites";
               color: rgba(49, 48, 55, 1);
